fix:  - fps no longer drops when loading the minotaur  - camera ratio restrain to 16:9  - multiple widget anchor to the middle of the screen add:  - engine switch to 4.27

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/TitleScreen.TitleScreen
-EditorStartupMap=/Game/Maps/TutorialMap.TutorialMap
+EditorStartupMap=/Game/John/ProtoMap_P.ProtoMap_P
 GlobalDefaultGameMode=/Game/Character/BP_ProjectGoatGameMode.BP_ProjectGoatGameMode_C
 GameInstanceClass=/Game/Character/CoreBP/BP_BulkheadGameInstance.BP_BulkheadGameInstance_C
 
@@ -25,6 +25,8 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 
+
+
 [/Script/Engine.RendererSettings]
 r.CustomDepth=3
 r.DefaultFeature.AutoExposure=False
@@ -34,6 +36,8 @@ r.MobileHDR=True
 r.TemporalAA.Upsampling=False
 r.DefaultFeature.LensFlare=False
 r.SupportSkyAtmosphereAffectsHeightFog=True
+r.TextureStreaming = true
+r.Streaming.PoolSize = 1500
 
 [/Script/AIModule.AISystem]
 bAllowControllersAsEQSQuerier=True
