--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -105,7 +105,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="SelectTower",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +ActionMappings=(ActionName="AirStrike",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=One)
 +ActionMappings=(ActionName="CollectGold",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Two)
-+ActionMappings=(ActionName="FastForward",bShift=True,bCtrl=False,bAlt=False,bCmd=False,Key=T)
++ActionMappings=(ActionName="FastForward",bShift=False,bCtrl=True,bAlt=False,bCmd=False,Key=T)
 +ActionMappings=(ActionName="Cancel",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Three)
 +ActionMappings=(ActionName="OpenMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +ActionMappings=(ActionName="Throw",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
