fix:  - tutorial crashing  - packaged icon

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/TitleScreen.TitleScreen
-EditorStartupMap=/Game/John/ProtoMap_P.ProtoMap_P
+EditorStartupMap=/Game/Maps/TutorialMap.TutorialMap
 GlobalDefaultGameMode=/Game/Character/BP_ProjectGoatGameMode.BP_ProjectGoatGameMode_C
 GameInstanceClass=/Game/Character/CoreBP/BP_BulkheadGameInstance.BP_BulkheadGameInstance_C
 
